# python-project-50

./: Makefile  README.md  diff_dict.py  loader.py  pyproject.toml  test_gendiff.py
.github/workflows/: gendiff.yml
app/: gendiff.py  loading.py  parser_cli.py
app/formaters/: stylish.py
app/scripts/: app_starter.py
gendiff/: __init__.py  app.py  comparer.py  gendiff.py  lib_gen_diff.py  loading.py  parser.py
gendiff/formaters/: json_.py  json_dump_file.json  normalize.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.yml  file2.yml  right_json_format.txt
